# SFML_CPP_Simple_Games

./: .gitignore  CMakeLists.txt  README.md
Game_1/: CMakeLists.txt
Game_2/: CMakeLists.txt
Game_2/include/: Game.h  Player.h  SwagBall.h
Game_2/src/: Game.cpp  Player.cpp  SwagBall.cpp  main.cpp
Game_3/: CMakeLists.txt
SFML_RPG/: CMakeLists.txt
SFML_RPG/config/: Window.ini
SFML_RPG/include/: Button.h  Entity.h  Game.h  GameState.h  MainMenuState.h  State.h
SFML_RPG/src/: Button.cpp  Entity.cpp  Game.cpp  GameState.cpp  MainMenuState.cpp  State.cpp  main.cpp
include/: Game.h
src/: Game.cpp  main.cpp
